--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -52,10 +52,22 @@ nav ul li {
   margin: 0 5px;
   list-style-type: none;
   border-bottom: 2px solid transparent;
+  position: relative;
 }
 
-nav ul li:hover {
-  border-bottom: 2px solid #888dc4;
+nav ul li::after{
+  content: "";
+  width: 0%;
+  transition: all 0.5s linear;
+  position: absolute;
+  top: 100%;
+  height: 2px;
+  background-color: transparent;
+}
+
+nav ul li:hover::after {
+  background-color: #888dc4;
+  width: 100%;
 }
 
 nav ul li a {
